chore: update `operationId` of swagger paths
